# OOP_lab3

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/: stat.h
scr/: stat.cpp
test/: main.cpp  mas.txt  test.txt  test_stat.cpp
